<resources>
    <string name="app_name">L04-Reservation</string>
    <string name="smoking">Smoking</string>
    <string name="non_smoking">Non-Smoking</string>
    <string name="name">Name: </string>
    <string name="phone_number">Phone Number: </string>
    <string name="number_of_pax">Number of Pax: </string>
    <string name="table_preference">Table Preference: </string>
    <string name="date_of_reservation">Date of Reservation:</string>
    <string name="time_of_reservation">Time of Reservation:</string>
    <string name="smoking_area">Smoking Area</string>
    <string name="non_smoking_area">Non-Smoking Area</string>
    <string name="confirm">Confirm</string>
    <string name="reset">Reset</string>
</resources>